--- a/index.html
+++ b/index.html
@@ -2,113 +2,26 @@
 <html lang="en">
 <head>
 	<title>Greet</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="icon" type="image/png" href="images/cake.jpg">
 	<script src="https://kit.fontawesome.com/2585d495ef.js" crossorigin="anonymous"></script>
-	<style type="text/css">
-		body {
-			font-family: sans-serif;
-			font-size: 100%;
-			margin: 0% 5%;
-			background-color: rgb(232, 232, 232);
-		}
 
-		#logo {
-			float: left;
-			height: 80px;
-			position: absolute;
-			margin: 10px;
-			margin-left: 20px;
-		}
-
-		header h1 {
-			font-size: 4em;
-			font-family: sans-serif;
-			font-variant: small-caps;
-			line-height: 100px;
-			margin-bottom: 0px;
-			text-align: center;
-			background-color: white;
-		}
-
-		#greet, #greet:hover {
-			background-color: white;
-			color: rgba(94, 19, 99, 1);
-			margin: 0 auto;
-		}
-
-		nav {
-			margin: 0px;
-			padding: 0px;
-			background-color: black;
-			line-height: 45px;
-		}
-
-		.nav {
-			display: inline-block;
-			color: white;
-			font-size: 1.2em;
-			font-style: bold;
-			text-decoration: none;
-			width: 130px;
-			text-align: center;
-		}
-
-		.nav:hover, #current {
-			color: white;
-			background-color: rgba(94, 19, 99, 1);
-		}
-
-		a {
-			text-decoration: none;
-		}
-
-		footer {
-			font-size: .8em;
-			font-weight: bold;
-		}
-
-		footer, footer a, footer a:hover {
-			background-color: rgba(94, 19, 99, 1);
-			color: white
-		}
-
-		footer a:hover {
-			text-decoration: underline;
-		}
-
-		footer span {
-			cursor: pointer;
-		}
-
-		footer i {
-			margin: 5px 20px 5px 20px;
-		}
-
-		footer li {
-			list-style: none;
-		}
-
-		#greeting {
-			color: rgb();
-		}
-	</style>
 </head>
 
 <body>
 	<header>
 		<a href="greet.html"><img src="images/cake.jpg" id="logo" height="100"></a>
 		<h1><a id="greet" href="greet.html" target="_blank">Assalam u Alaikum</a></h1>
-		<hr id="top">
 		<nav>
 			<a class="nav" id="current" href="greet.html">Greet</a>
 			<a class="nav" href="meet.html">Meet</a>
 			<a class="nav" href="treat.html">Treat</a>
+			<a class="nav" href="sweet.html">Sweet</a>
 		</nav>
-		<hr id="bottom">
 	</header>
 
 	<main>
-		<h1 id="greeting">Happy Birthday!</h1>
+		<h1 id="greeting">Greetings!</h1>
 		<h2 id="name">Name</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
