--- a/sweet.html
+++ b/sweet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Greet</title>
+	<title>Sweet</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="icon" type="image/png" href="images/cake.jpg">
 	<script src="https://kit.fontawesome.com/2585d495ef.js" crossorigin="anonymous"></script>
@@ -13,17 +13,14 @@
 		<a href="index.html"><img src="images/cake.jpg" id="logo" height="100"></a>
 		<h1><a id="greet" href="index.html">Assalam u Alaikum</a></h1>
 		<nav>
-			<a class="nav" id="current" href="index.html">Greet</a>
+			<a class="nav" href="index.html">Greet</a>
 			<a class="nav" href="meet.html">Meet</a>
 			<a class="nav" href="treat.html">Treat</a>
-			<a class="nav" href="sweet.html">Sweet</a>
+			<a class="nav" id="current" href="sweet.html">Sweet</a>
 		</nav>
 	</header>
-
 	<main>
-		<h1 id="greeting">Greetings!</h1>
-		<h2 id="name">Name</h2>
-		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
+		<h2 id="name">May Allah bless you a healthy and happy life.</h2>
 	</main>
 	
 	<footer>
