--- a/meet.html
+++ b/meet.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">We first met at.</h2>
-		<h1 id="greeting">Place</h1>
+		<h2 id="name">We first met at</h2>
+		<h1 id="greeting">Facebook</h1>
 		
 	</main>
 	
