--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<main>
 		<h1 id="greeting">Happy Birthday!</h1>
-		<h2 id="name">Wajeeha api</h2>
+		<h2 id="name">Faheem mamu</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
 	
