--- a/meet.html
+++ b/meet.html
@@ -22,7 +22,7 @@
 
 	<main>
 		<h2 id="name">We first met at</h2>
-		<h1 id="greeting">Facebook</h1>
+		<h1 id="greeting">Hospital</h1>
 		
 	</main>
 	
