--- a/treat.html
+++ b/treat.html
@@ -22,7 +22,7 @@
 
 	<main>
 		<h2 id="name">So, Party kab dy rhy ho!</h2>
-		<h3 id="credit">Wajeeha api</h3>
+		<h3 id="credit">Faheem Mamu</h3>
 	</main>
 	
 	<footer>
