Wishing miss Salma

--- a/treat.html
+++ b/treat.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">So, Party kab dy rhy ho!</h2>
-		<h3 id="credit">Faheem Mamu</h3>
+		<h2 id="name">So, Party kab dy rho hain!</h2>
+		<h3 id="credit">Miss</h3>
 	</main>
 	
 	<footer>
