--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 	<main>
 		<h1 id="greeting">Happy Birthday!</h1>
-		<h2 id="name">Miss Salma</h2>
+		<h2 id="name">Bilal bhai</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
-	
+
 	<footer>
 		<ul>
 			<li>
@@ -37,7 +37,7 @@
 				<a href="https://www.instagram.com/ataibsaboor04/" target="_blank" aria-label="Instagram" title="Instagram">https://www.instagram.com/ataibsaboor04/</a>
 			</li>
 			<li>
-				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>				
+				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>
 				<a href="https://github.com/ataibsaboor04" target="_blank" aria-label="GitHub"  title="GitHub">https://github.com/ataibsaboor04</a>
 			</li>
 			<li>
