--- a/meet.html
+++ b/meet.html
@@ -22,10 +22,10 @@
 
 	<main>
 		<h2 id="name">We first met at</h2>
-		<h1 id="greeting">ASF Public School</h1>
-		
+		<h1 id="greeting">My grandmother's home</h1>
+
 	</main>
-	
+
 	<footer>
 		<ul>
 			<li>
@@ -37,7 +37,7 @@
 				<a href="https://www.instagram.com/ataibsaboor04/" target="_blank" aria-label="Instagram" title="Instagram">https://www.instagram.com/ataibsaboor04/</a>
 			</li>
 			<li>
-				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>				
+				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>
 				<a href="https://github.com/ataibsaboor04" target="_blank" aria-label="GitHub"  title="GitHub">https://github.com/ataibsaboor04</a>
 			</li>
 			<li>
