--- a/treat.html
+++ b/treat.html
@@ -21,10 +21,10 @@
 	</header>
 
 	<main>
-		<h2 id="name">So, Party kab dy rho hain!</h2>
-		<h3 id="credit">Miss</h3>
+		<h2 id="name">So, Party kab dy rhy hain!</h2>
+		<h3 id="credit">Bilal bhai</h3>
 	</main>
-	
+
 	<footer>
 		<ul>
 			<li>
@@ -36,7 +36,7 @@
 				<a href="https://www.instagram.com/ataibsaboor04/" target="_blank" aria-label="Instagram" title="Instagram">https://www.instagram.com/ataibsaboor04/</a>
 			</li>
 			<li>
-				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>				
+				<i class="fab fa-github fa-2x" title="GitHub" aria-label="GitHub"></i>
 				<a href="https://github.com/ataibsaboor04" target="_blank" aria-label="GitHub"  title="GitHub">https://github.com/ataibsaboor04</a>
 			</li>
 			<li>
