--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h1 id="greeting">Happy Birthday!</h1>
-		<h2 id="name">Bilal bhai</h2>
+		<h1 id="greeting">I am Sorry!</h1>
+		<h2 id="name">Maha meri behna</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
 
