--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<main>
 		<h1 id="greeting">I am Sorry!</h1>
-		<h2 id="name">Maha meri behna</h2>
+		<h2 id="name">Shafaq meri behan</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
 
