--- a/treat.html
+++ b/treat.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">Please i am so much ashamed. Forgive me yr</h2>
-		<h3 id="credit">Behna meri pyari</h3>
+		<h2 id="name">So, bday party kab dy rhy xD</h2>
+		<h3 id="credit">Humais</h3>
 	</main>
 
 	<footer>
