Maha ko manana mzq k bd

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h1 id="greeting">Happy Birthday!</h1>
-		<h2 id="name">Humais</h2>
+		<h1 id="greeting">I am  sorry!</h1>
+		<h2 id="name">Meri boht pyari behan Maha</h2>
 		<h3 id="credit">From: <span>Ataib Saboor</span></h3>
 	</main>
 
