--- a/treat.html
+++ b/treat.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">So, bday party kab dy rhy xD</h2>
-		<h3 id="credit">Humais</h3>
+		<h2 id="name">Mzaq kia yr tmhary sath</h2>
+		<h3 id="credit">Maha</h3>
 	</main>
 
 	<footer>
