Wish Andleeb ani

--- a/meet.html
+++ b/meet.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">We first met at</h2>
-		<h1 id="greeting">Schools</h1>
+		<h2 id="name">We first met</h2>
+		<h1 id="greeting">After my birth xD</h1>
 
 	</main>
 
