--- a/treat.html
+++ b/treat.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">So, party kab dy rhy ho</h2>
-		<h3 id="credit">Hanan</h3>
+		<h2 id="name">So, party kab dy rhi hain?</h2>
+		<h3 id="credit">Choti Ani :P</h3>
 	</main>
 
 	<footer>
