Wishing Junaid bhai

--- a/meet.html
+++ b/meet.html
@@ -22,7 +22,7 @@
 
 	<main>
 		<h2 id="name">We first met</h2>
-		<h1 id="greeting">After my birth xD</h1>
+		<h1 id="greeting">In my childhood</h1>
 
 	</main>
 
