--- a/treat.html
+++ b/treat.html
@@ -21,8 +21,8 @@
 	</header>
 
 	<main>
-		<h2 id="name">So, party kab dy rhay hain?</h2>
-		<h3 id="credit">Junaid bhai ;)</h3>
+		<h2 id="name">So, party kab dy rhay?</h2>
+		<h3 id="credit">Immaz bhai ;)</h3>
 	</main>
 
 	<footer>
